--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
               <img src="img/product2.jpg" alt="" class="cart-img" />
               <div class="detail-box">
                 <div class="cart-product-title">Earbuds</div>
-                <div class="cart-price">$25</div>
-                <input type="number" value="1" min="1" class="cart-quantity" />
+                <div class="cart-price">$25.23</div>
+                <input type="number" value="1" class="cart-quantity" />
               </div>
               <!-- Remove Cart -->
               <i class="bx bxs-trash-alt cart-remove"></i>
@@ -39,7 +39,7 @@
           </div>
           <div class="total">
             <div class="total-title">Total</div>
-            <div class="total-price">$25</div>
+            <div class="total-price">$0</div>
           </div>
           <!-- Buy Button -->
           <button class="btn-buy">Buy Now</button>
