--- a/index.html
+++ b/index.html
@@ -25,18 +25,7 @@
         <div class="cart">
           <h2 class="cart-title">Your Cart</h2>
           <!-- Content -->
-          <div class="cart-content">
-            <div class="cart-box">
-              <img src="img/product2.jpg" alt="" class="cart-img" />
-              <div class="detail-box">
-                <div class="cart-product-title">Earbuds</div>
-                <div class="cart-price">$25.23</div>
-                <input type="number" value="1" class="cart-quantity" />
-              </div>
-              <!-- Remove Cart -->
-              <i class="bx bxs-trash-alt cart-remove"></i>
-            </div>
-          </div>
+          <div class="cart-content"></div>
           <div class="total">
             <div class="total-title">Total</div>
             <div class="total-price">$0</div>
@@ -98,7 +87,7 @@
         <!-- Box 7 -->
         <div class="product-box">
           <img src="img/product7.jpg" alt="" class="product-img" />
-          <h2 class="product-title">BACK HAT</h2>
+          <h2 class="product-title">BACKPACK</h2>
           <span class="price">$70</span>
           <i class="bx bx-shopping-bag add-cart"></i>
         </div>
